iptables_working
# Generated by iptables-save v1.6.0 on Mon May 22 00:27:55 2017
*filter
:INPUT ACCEPT [141:11620]
:FORWARD DROP [0:0]
:OUTPUT ACCEPT [14110:13999698]
:DOCKER - [0:0]
:DOCKER-ISOLATION - [0:0]
-A INPUT -m comment --comment "001 accept related established rules" -m state --state RELATED,ESTABLISHED -j ACCEPT
-A INPUT -i lo -m comment --comment "002 accept all to lo interface" -j ACCEPT
-A INPUT -p tcp -m multiport --dports 22 -m comment --comment "003 SSH rate limit DROP" -m state --state NEW -m recent --update --seconds 600 --hitcount 3 --name DEFAULT --mask 255.255.255.255 --rsource -j DROP
-A INPUT -p tcp -m multiport --dports 22 -m comment --comment "003 accept ssh tcp traffic" -j ACCEPT
-A INPUT -p tcp -m multiport --dports 22 -m comment --comment "004 SSH Mark NEW connections" -m state --state NEW -m recent --set --name DEFAULT --mask 255.255.255.255 --rsource
-A INPUT -p udp -m multiport --dports 22 -m comment --comment "004 accept ssh udp traffic" -j ACCEPT
-A INPUT -p tcp -m multiport --dports 80 -m comment --comment "005 accept http tcp traffic" -j ACCEPT
-A INPUT -p tcp -m multiport --dports 22 -m comment --comment "005 accept ssh tcp traffic" -j ACCEPT
-A INPUT -p udp -m multiport --dports 80 -m comment --comment "006 accept http udp traffic" -j ACCEPT
-A INPUT -p udp -m multiport --dports 22 -m comment --comment "006 accept ssh udp traffic" -j ACCEPT
-A INPUT -p tcp -m multiport --dports 80 -m comment --comment "007 accept http tcp traffic" -j ACCEPT
-A INPUT -p tcp -m multiport --dports 443 -m comment --comment "007 accept https tcp traffic" -j ACCEPT
-A INPUT -p udp -m multiport --dports 80 -m comment --comment "008 accept http udp traffic" -j ACCEPT
-A INPUT -p udp -m multiport --dports 443 -m comment --comment "008 accept https udp traffic" -j ACCEPT
-A INPUT -p tcp -m multiport --dports 443 -m comment --comment "009 accept https tcp traffic" -j ACCEPT
-A INPUT -p udp -m multiport --dports 443 -m comment --comment "010 accept https udp traffic" -j ACCEPT
-A INPUT -p tcp -m multiport --dports 5000 -m comment --comment "011 accept port 5000 tcp traffic" -j ACCEPT
-A INPUT -p udp -m multiport --dports 5000 -m comment --comment "012 accept port 5000 tcp traffic" -j ACCEPT
-A INPUT -p tcp -m multiport --dports 53 -m comment --comment "013 accept DNS tcp traffic" -j ACCEPT
-A INPUT -p udp -m multiport --dports 53 -m comment --comment "014 accept DNS udp traffic" -j ACCEPT
-A INPUT -p tcp -m multiport --dports 514 -m comment --comment "015 accept rsyslog tcp traffic" -j ACCEPT
-A INPUT -p udp -m multiport --dports 514 -m comment --comment "016 accept rsyslog udp traffic" -j ACCEPT
-A FORWARD -j DOCKER-ISOLATION
-A FORWARD -o docker0 -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -o docker0 -j DOCKER
-A FORWARD -i docker0 ! -o docker0 -j ACCEPT
-A FORWARD -i docker0 -o docker0 -j ACCEPT
-A DOCKER -d 172.17.0.2/32 ! -i docker0 -o docker0 -p tcp -m tcp --dport 514 -j ACCEPT
-A DOCKER -d 172.17.0.2/32 ! -i docker0 -o docker0 -p udp -m udp --dport 514 -j ACCEPT
-A DOCKER-ISOLATION -j RETURN
COMMIT
# Completed on Mon May 22 00:27:55 2017
# Generated by iptables-save v1.6.0 on Mon May 22 00:27:55 2017
*nat
:PREROUTING ACCEPT [10776:650085]
:INPUT ACCEPT [131:10074]
:OUTPUT ACCEPT [136:8676]
:POSTROUTING ACCEPT [142:9036]
:DOCKER - [0:0]
-A PREROUTING -m addrtype --dst-type LOCAL -j DOCKER
-A OUTPUT ! -d 127.0.0.0/8 -m addrtype --dst-type LOCAL -j DOCKER
-A POSTROUTING -s 172.17.0.0/16 ! -o docker0 -j MASQUERADE
-A POSTROUTING -s 172.17.0.2/32 -d 172.17.0.2/32 -p tcp -m tcp --dport 514 -j MASQUERADE
-A POSTROUTING -s 172.17.0.2/32 -d 172.17.0.2/32 -p udp -m udp --dport 514 -j MASQUERADE
-A DOCKER -i docker0 -j RETURN
-A DOCKER ! -i docker0 -p tcp -m tcp --dport 514 -j DNAT --to-destination 172.17.0.2:514
-A DOCKER ! -i docker0 -p udp -m udp --dport 514 -j DNAT --to-destination 172.17.0.2:514
COMMIT
# Completed on Mon May 22 00:27:55 2017
